added route for merchant integration with Square

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,3 +22,9 @@
 
 <p>Stripe Merchants</p>
 <a href="/stripeMerchantSignUp">Sign Up with Stripe</a>
+
+<br>
+<br>
+
+<p>Square Merchants</p>
+<a href="/integrateSquare">Integrate your Square Account!</a>
