Created a Square Developer account for OrderWeasel; Updated client_id for OAuth PKCE flow

--- a/views/integrateSquare.hbs
+++ b/views/integrateSquare.hbs
@@ -3,17 +3,17 @@
 <a href="" id="sqintegration" data-codechallenge="{{codeChallenge}}" data-codeverifier="{{codeVerifier}}">Start Square Integration</a>
 
 <script>
-// OrderWeasel Square Sandbox Application ID = 'sandbox-sq0idb-7eLHu6HJWhA_tWlfYSVxXA'
-// OrderWeasel Square Sandbox Application Secret = 'sandbox-sq0csb-D2ld_a1psxQ7a2onFk4yoyfhKWszep-L3SbnafAS8_E'
+// OrderWeasel Square Sandbox Application ID = 'sandbox-sq0idb-uvSS-ef1c6SEh4JePdXH1w'
+// OrderWeasel Square Sandbox Application Secret = 'sandbox-sq0csb-qB5O26_dxnoNen91GO9MPDwWHWs7bghAdH6ZHc3fvso'
 
-  
+  const sandboxApplicationID = 'sandbox-sq0idb-uvSS-ef1c6SEh4JePdXH1w'
   const a = document.querySelector('#sqintegration');
   const codeChallenge = a.dataset.codechallenge;
   const codeVerifier = a.dataset.codeverifier;
   console.log(`code_challenge: ${codeChallenge}`);
   console.log(`code_verifier: ${codeVerifier}`);
   localStorage.setItem('codeVerifier', `${codeVerifier}`);
-  a.href = `https://connect.squareupsandbox.com/oauth2/authorize?scope=ITEMS_READ%20ORDERS_WRITE%20ORDERS_READ%20PAYMENTS_WRITE&client_id=sandbox-sq0idb-7eLHu6HJWhA_tWlfYSVxXA&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth-redirect&code_challenge=${codeChallenge}`;
+  a.href = `https://connect.squareupsandbox.com/oauth2/authorize?scope=ITEMS_READ%20ORDERS_WRITE%20ORDERS_READ%20PAYMENTS_WRITE&client_id=${sandboxApplicationID}&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth-redirect&code_challenge=${codeChallenge}`;
 
 
 </script>
